templates/portfolio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio-app
        image: hashicorp/http-echo:latest
        args:
        - "-text=Welcome to my Professional Portfolio Page!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: production
spec:
  selector:
    app: portfolio
  type: ClusterIP # Notice: We lock this door too!
  ports:
    - port: 80
      targetPort: 5678
