templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  namespace: production 
spec:
  selector:
    app: nginx
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
